<resources>
    <string name="app_name">EjercicioPreferencias</string>
    <string name="connection_data">Connection data</string>
    <string name="user">User</string>
    <string name="user_summary">Indicate your user</string>
    <string name="password">Password</string>
    <string name="password_summary">Indicate your password</string>
    <string name="service">Service</string>
    <string name="enable_service">Enable service</string>
    <string name="service_summary">The service will start automatically</string>
    <string name="security">Security</string>
    <string name="use_encription">Use encription</string>
    <string name="encryption_algorithm">Encryption algorithm</string>
</resources>